Fix layout issues on search landing page

--- a/sass/includes/search/_search-landing-buckets.scss
+++ b/sass/includes/search/_search-landing-buckets.scss
@@ -1,58 +1,69 @@
 .search-landing-buckets {
-    margin-left: auto;
-    margin-right: auto;
+    // margin-left: auto;
+    // margin-right: auto;
 
     &__heading {
-        margin-left: 2.5rem;
+        // margin-left: 2.5rem;
         font-family: $font__supria-sans;
         font-size: 1.5rem;
 
         @media only screen and (max-width: $screen__md) {
-            margin-left: 2rem;
+            // margin-left: 2rem;
         }
     }
 
     &__list {
         display: flex;
-        flex-wrap: wrap;
-        margin-left: auto;
-        margin-right: auto;
-        padding-left: 2rem;
-        padding-right: 2rem;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        align-items: stretch;
+        margin: 0;
+        padding: 0;
+        // margin-left: auto;
+        // margin-right: auto;
+        // padding-left: 2rem;
+        // padding-right: 2rem;
 
-        @media only screen and (min-width: $screen__md) {
-            padding-left: 0;
-            padding-right: 0;
-            margin-left: 2.5em;
+        // @include media.on-large {
+        // padding-left: 0;
+        // padding-right: 0;
+        // margin-left: 2.5em;
+        // }
+
+        @include media.on-mobile {
+            flex-wrap: wrap;
         }
 
         &-item {
             font-size: 1.2rem;
             display: inline-block;
             list-style: none;
-            width: 250px;
-            margin-right: 1rem;
-            min-height: 100px;
+            // width: 250px;
+            flex: 1 1 250px;
+            // margin-right: 1rem;
             margin-bottom: 1rem;
             font-family: $font__supria-sans;
+
+            @include media.on-large {
+                flex: 1;
+            }
         }
     }
 
     &__link {
         text-align: center;
-        padding: 14px;
+        padding: 1rem;
         display: block;
         border: 1px solid $color__grey-500;
         width: 100%;
-        margin-top: auto;
-        margin-bottom: auto;
+        margin: 0;
         text-decoration: none;
         height: 100%;
-        color: $color__navy;
         display: flex;
         align-items: center;
         justify-content: center;
 
+        &,
         &:visited {
             color: $color__navy;
         }
